# aws-lamdba-rust-portal

./: AWS_SETUP.md  Cargo.toml  README.md
api/: Cargo.toml  serverless.yaml
api/portal/: Cargo.toml
api/portal/src/: main.rs
api/src/: lib.rs  main.rs
api/users/: Cargo.toml
api/users/src/: main.rs  tmpflk85m  tmpfr9q15  tmpr97kpa
src/: main.rs  tmp88_owm  tmp90_emv  tmpfa6cho  tmpg4w7mz  tmpmvbliy  tmpr6y648  tmproxc48  tmpskr_4g  tmpv49xqh  tmpw1g2ep  tmpw65n2u
