[package]
name = "api"
version = "0.1.0"
authors = ["立青木白 <cywhoyi@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
autobins = false

[dependencies]
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
