[package]
name = "api"
version = "0.1.0"
authors = ["立青木白 <cywhoyi@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
reqwest = "0.9.24"

[[bin]]
name = "api"
path = "src/main.rs"


#[[bin]]
#name = "bootstrap"
#path = "src/main.rs"