[package]
name = "portal"
version = "0.1.0"
authors = ["LiQingMuBai <cywhoyi@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.0"
lambda_runtime_errors = "0.1.0"
lambda_http = "0.1.0"

rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
rusoto_mock = "0.30.0"
rusoto_lambda = "0.36.0"
log = "^0.4"
simple_logger = "^1"

#reqwest = "0.9.22"
hyper = "0.14.10"
hyper-tls = "0.3.0"
serde = "1.0.70"
serde_json = "1.0.24"
tokio = "0.1.7"
serde_derive = "1.0.70"
rocket = "0.4.1"


futures = "0.1.23"
native-tls = "0.2.0"
failure = "0.1.1"
failure_derive = "0.1.1"

http = "0.1.8"

[dev-dependencies]
#serde_derive = "1.0.70"

[[bin]]
name = "portal"
path = "src/main.rs"
