[package]
name = "aws-lamdba-rust-portal"
version = "0.1.0"
authors = ["立青木白 <cywhoyi@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
autobins = false

[dependencies]
lambda_runtime = "0.2.0"
lambda_runtime_errors = "0.1.0"
lambda_http = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
http = "0.1.1"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
rusoto_mock = "0.30.0"
rusoto_lambda = "0.36.0"
log = "^0.4"
simple_logger = "^1"
reqwest = "0.9.22"

[[bin]]
name = "users"
path = "src/main.rs"
